# Ye

./: .env.example  .gitignore  README.md  SECURITY.md
backend/: .gitignore  Dockerfile  MIGRATION_GUIDE.md  docker-compose.yml  env.example  install-yjl.ps1  install.ps1  install.sh  pyproject.toml
backend/.venv2/: pyvenv.cfg
backend/.venv2/Scripts/: activate  activate.bat
backend/app/: agents.py  budget.py  config.py  conversation.py  cron.py  eval.py  eval_benchmarks.py  execution_trace.py  failure.py  hooks.py  lint.py  main.py  mcp_client.py  mcp_servers.example.json  memory.py  orchestrator.py  permission_rules.py  permissions.py  prompts.py  rate_limit.py  session_search.py  sessions.py  skills.py  snapshot.py  soul.py  tasks.py  todo_store.py  tool_registry.py  worktree.py
backend/app/api/: auth.py  conversations.py  deps.py  files.py  git.py  plugins.py  projects.py  search.py  settings.py  terminal.py
backend/app/auth/: jwt_handler.py
backend/app/cli/: main.py  theme.py
backend/app/indexer/: _brace_parser.py  code_parser.py  vector_store.py
backend/app/llm/: base_provider.py  fuzzy_replace.py  raw_http.py  tool_executor.py  tool_repair.py  tools.py  tools_legacy.py  zhipu_provider.py
backend/app/llm/tools/: __init__.py  _common.py  agent_ops.py  file_ops.py  interaction_ops.py  search_ops.py  system_ops.py  todo_ops.py  web_ops.py
backend/app/plugins/: base.py  manager.py
backend/app/sandbox/: permissions.py  resource_limits.py  runner.py
backend/app/storage/: database.py  models.py
backend/app/ws/: gateway.py  sync_handler.py
backend/static/: index.html
backend/static/css/: style.css
backend/static/js/: app.js
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_brace_parser.py  test_conversation.py  test_eval_benchmarks.py  test_files.py  test_fuzzy_replace.py  test_git.py  test_harness.py  test_html_generation.py  test_lint.py  test_mcp_client.py  test_memory.py  test_orchestrator.py  test_permission_rules.py  test_permissions.py  test_prompts.py  test_sandbox_runner.py  test_skills.py  test_snapshot.py  test_startup_perf.py  test_todo_store.py  test_tool_repair.py  test_vector_store.py
desktop/: electron-builder.config.js  index.html  package-lock.json  package.json  (+1 more)
(+69 files in other folders)
