[project]
name = "ai-coding-assistant"
version = "0.1.0"
description = "A cross-platform AI coding assistant (Claude Code clone)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.60.0",
    "zhipuai>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=14.0",
    "aiofiles>=24.0.0",
    "chromadb>=0.5.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
ye = "app.cli.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
